--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,22 +1,33 @@
 <navbar></navbar>
 
 <main class="body">
-  <div class="flex flex-row">
+  <div class="flex flex-column align-items-center">
     <h3 class="text-center w-full">Todo items :</h3>
-    @for (item of (todoItems$ | async); track $index;) {
-    <div>{{ item.name }}</div>
-    }
-    <p-dataView #dv [value]="(todoItems$ | async)!">
-      <ng-template pTemplate="list" let-products>
-        <div class="grid grid-nogutter">
-          @for (item of products; track $index;) {
+    <!-- @for (item of (tasks$ | async); track $index;) {
+    <div>{{ item.title }}</div>
+    } -->
+    <div class="w-30rem">
+      <p-dataView #dv [value]="(tasks$ | async)!">
+        <ng-template pTemplate="list" let-products>
+          <div class="grid grid-nogutter">
             <div class="col-12">
-              {{ item.name }}
+              @for (item of products; track $index;) {
+              <div class="flex flex-column sm:flex-row sm:align-items-center p-4 gap-3 border-bottom-1 border-200">
+                <div class="flex flex-column md:flex-row justify-content-between md:align-items-center flex-1 gap-4">
+                  <div class="flex flex-row md:flex-column justify-content-between align-items-start gap-2">
+                    <div class="flex flex-row align-items-center vertical-align-middle">
+                      <i class="pi pi-list" style="color: slateblue"></i>
+                      <div class="text-lg font-medium text-900 ml-4">{{ item.title }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              }
             </div>
-          }
-        </div>
-      </ng-template>
-    </p-dataView>
+          </div>
+        </ng-template>
+      </p-dataView>
+    </div>
   </div>
 </main>
 
